--- a/contact.html
+++ b/contact.html
@@ -120,13 +120,7 @@
 		</div>
 	</footer>
 	
-	<script>
-
-        function toggleMenu() {
-            var nav = document.querySelector('.myNav');
-            nav.classList.toggle('active'); 
-        }
-    </script>
+	<script src="minimenu.js"></script>
 	
 </body>
 
